feat: UnoCSS、react-dom、代码规范工具配置完毕

--- a/hello-react/src/index.css
+++ b/hello-react/src/index.css
@@ -1,3 +1,7 @@
+@unocss preflights;
+@unocss defauly;
+@unocss all;
+@unocss;
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
